# NeuroTessMesh

./: .NeuroTessMesh.desktop  .dlls  .gitignore  .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  Changelog.md  README.md  neurotessmesh.desktop
.docker/: Dockerfile_nvidia-ubuntu-16.04  Dockerfile_ubuntu-16.04
CMake/: CPackConfig.cmake  FindnvidiaOpenGL.cmake
neurotessmesh/: CMakeLists.txt  CMakeSetup.rc  ColorSelectionWidget.cpp  ColorSelectionWidget.h  LoaderThread.cpp  LoaderThread.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  SaveScreenshotDialog.cpp  SaveScreenshotDialog.h  SaveScreenshotDialog.ui  Scene.cpp  Scene.h  mainwindow.ui  neurotessmesh.cpp  neurotessmesh.icns  resources.qrc
neurotessmeshServer/: CMakeLists.txt  neurotessmeshServer.cpp
